# ChangeLog for media-libs/exiftool
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.7 2006/09/08 11:49:03 nattfodd Exp $

*exiftool-6.36 (08 Sep 2006)

  08 Sep 2006; Alexandre Buisse <nattfodd@gentoo.org> -exiftool-6.13.ebuild,
  +exiftool-6.36.ebuild:
  Bump to 6.36 and removal of old 6.13.

  15 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  exiftool-6.17.ebuild:
  Added ~ppc, bug #136864

*exiftool-6.17 (12 May 2006)

  12 May 2006; Alexandre Buisse <nattfodd@gentoo.org> +exiftool-6.17.ebuild:
  Bump to 0.17.

  27 Apr 2006; Jason Wever <weeve@gentoo.org> exiftool-6.13-r1.ebuild:
  Added ~sparc keyword.

  25 Apr 2006; Scott Stoddard <deltacow@gentoo.org> exiftool-6.13-r1.ebuild:
  ~amd64 added. (bug #130755)

*exiftool-6.13-r1 (24 Apr 2006)

  24 Apr 2006; Alexandre Buisse <nattfodd@gentoo.org>
  +exiftool-6.13-r1.ebuild:
  Don't install perllocal.pod which was creating conflicts with other
  packages. Thanks to perl-module eclass for the nice fixlocalpod function.
  Closes bug #130755.

*exiftool-6.13 (10 Apr 2006)

  10 Apr 2006; Alexandre Buisse <nattfodd@gentoo.org> +metadata.xml,
  +exiftool-6.13.ebuild:
  Initial import. This is a graphics package, but it includes some perl dark
  magic so belongs to both herds.
