@@ -1,0 +1,3 @@
+MD5 0483172f2f42d9abf2501dc88873cf52 Image-ExifTool-6.44.tar.gz 1077976
+RMD160 c309d53898eed08102fde1ec6a915ae7795b9cbe Image-ExifTool-6.44.tar.gz 1077976
+SHA256 82a7374b4d9f61c443efd8360ba7c9b8305e3e6e002456305128270e64229daa Image-ExifTool-6.44.tar.gz 1077976
