@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/exiftool
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.7 2006/09/08 11:49:03 nattfodd Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.8 2006/10/04 21:40:01 nattfodd Exp $
+
+*exiftool-6.44 (04 Oct 2006)
+
+  04 Oct 2006; Alexandre Buisse <nattfodd@gentoo.org>
+  -exiftool-6.13-r1.ebuild, -exiftool-6.36.ebuild, +exiftool-6.44.ebuild:
+  Removed old 6.13-r1 ebuild and bumped to 0.44.
 
 *exiftool-6.36 (08 Sep 2006)
 
